adiciona links do indice e contato do linkedin | estiliza o footer

--- a/exercises/introducao-a-html-e-css_4/index.html
+++ b/exercises/introducao-a-html-e-css_4/index.html
@@ -14,91 +14,105 @@
     <header id='header'>
         <nav id="nav-links">
             <ul class="nav-links">
-                <li><a href="">Página Inicial</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#pagina-inicial">Página Inicial</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
+    <div id="pagina-inicial">
 
-    <article>
-        <h2>Stomatopoda  <img id='stomatopode2' src="./img/estomatopode2.png" alt=""></h2>
-       
-        <h3>Fatos sobre o Stomatopoda</h3>
-        <p>"Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma
-            ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas
-            principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando
-            uma pata de louva-a-deus."</p>
+        <article>
+            <h2>Stomatopoda <img id='stomatopode2' src="./img/estomatopode2.png" alt=""></h2>
+
+            <h3>Fatos sobre o Stomatopoda</h3>
+            <p>"Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é
+                uma
+                ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas
+                principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado,
+                lembrando
+                uma pata de louva-a-deus."</p>
             <img id='estomatopode1' src="./img/estomatopode1.jpeg" alt="">
-    </article>
+        </article>
+    </div>
+
+    <div id="sobre">
+        <section class='onde-vivem'>
+            <h3>Onde vivem?</h3>
+            <p><i>"Odontodactylus scyllarus</i> vive em tocas que constrói nos fundos dos corais, ou através de buracos
+                deixados por outros animais, em rochas e substratos próximos de corais de recifes a cerca de 40 metros
+                de
+                profundidade."
+            </p>
+        </section>
+        <section class="curiosidade">
+            <h3>Soco poderoso</h3>
+            <p>
+                "São capazes de desferir um dos mais rápidos e violentos golpes do reino animal, seu soco fora
+                registrado
+                com uma
+                velocidade de <b>80 km/h </b>e aceleração similar a uma arma calibre .22. A pressão exercida pelo soco é
+                de
+                60
+                kg/cm².
+                Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente
+                quebrar
+                a
+                carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro
+                reforçado
+                de um aquário."
+            </p>
+        </section>
+        <section class="dados-cientificos">
+            <h3>Aqui você pode encontrar as informações científicas sobre o tema!</h3>
+            <table id='table'>
+                <tr>
+                    <td>Reino:</td>
+                    <td>Animalia</td>
+                </tr>
+                <tr>
+                    <td>Filo:</td>
+                    <td>Arthropoda</td>
+                </tr>
+                <tr>
+                    <td>Subfilo:</td>
+                    <td>Crustacea</td>
+                </tr>
+                <tr>
+                    <td>Classe:</td>
+                    <td>Malacostraca</td>
+                </tr>
+                <tr>
+                    <td>Subclasse:</td>
+                    <td>Hoplocarida</td>
+                </tr>
+                <tr>
+                    <td>Ordem:</td>
+                    <td>Stomatopoda</td>
+                </tr>
+            </table>
+        </section>
+        <hr>
 
 
-    <section class='onde-vivem'>
-        <h3>Onde vivem?</h3>
-        <p><i>"Odontodactylus scyllarus</i> vive em tocas que constrói nos fundos dos corais, ou através de buracos
-            deixados por outros animais, em rochas e substratos próximos de corais de recifes a cerca de 40 metros de
-            profundidade."
-        </p>
-    </section>
+        <section id="video">
+            <iframe width="460" height="215" src="https://www.youtube.com/embed/E0Li1k5hGBE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe> <br>
+            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" title="">Mantis Shrimp Packs a Punch | Predator in
+                Paradise</a>
+        </section>
 
-    <section class="curiosidade">
-        <h3>Soco poderoso</h3>
-        <p>
-            "São capazes de desferir um dos mais rápidos e violentos golpes do reino animal, seu soco fora registrado
-            com uma
-            velocidade de <b>80 km/h </b>e aceleração similar a uma arma calibre .22. A pressão exercida pelo soco é de 60
-            kg/cm².
-            Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar
-            a
-            carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro
-            reforçado
-            de um aquário."
-        </p>
-    </section>
+        <footer id="footer">
+            <h6 id="referencia"><I>Fonte: Wikipédia.</I></h6> <hr>
 
-    <section class="dados-cientificos">
-        <h3>Aqui você pode encontrar as informações científicas sobre o tema!</h3>
-        <table id='table'>
-            <tr>
-                <td>Reino:</td>
-                <td>Animalia</td>
-            </tr>
-            <tr>
-                <td>Filo:</td>
-                <td>Arthropoda</td>
-            </tr>
-            <tr>
-                <td>Subfilo:</td>
-                <td>Crustacea</td>
-            </tr>
-            <tr>
-                <td>Classe:</td>
-                <td>Malacostraca</td>
-            </tr>
-            <tr>
-                <td>Subclasse:</td>
-                <td>Hoplocarida</td>
-            </tr>
-            <tr>
-                <td>Ordem:</td>
-                <td>Stomatopoda</td>
-            </tr>
-        </table>
-    </section>
-
-    <hr>
-
-    <section id="video">
-        <iframe width="460" height="215" src="https://www.youtube.com/embed/E0Li1k5hGBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
-        <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" title="">Mantis Shrimp Packs a Punch | Predator in Paradise</a>
-    </section>
-
-    <footer id="footer">
-        <h6 id="referencia">Fonte: Wikipédia</h6>
-        <h6>Conteúdo compilado por: Laíne Moura</h6>
-    </footer>
-
-
+            <div id="contato">
+                <h6>CONTEÚDO COMPILADO POR: <a href="Laíne Moura ">LAÍNE MOURA</a>
+                    <img id='linkedin-icon'src="./img/linkedin-icon.png" alt=""></h6>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
